--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20191215/pngtree-modern-double-colors-neon-lights-on-brick-background-image_324803.jpg");
+    background-image: url("https://assets.justinmind.com/wp-content/uploads/2020/02/website-background-design-guide-768x492.png");
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
@@ -10,10 +10,19 @@ body {
 .container{
     background-color: white;
     margin-top: 10%;
-    margin-left: 10%;
-    width: 80%;
-    border: 5px solid black;
+    margin-left: 20%;
+    width: 60%;
+    border: 3px solid black;
     border-radius: 10px;
+}
+.footer{
+    background-color: white;
+    width: 15%;
+    margin-left: 83%;
+    margin-top: 10%;
+    border: 2px solid blue;
+    border-radius: 5px;
+    font-size: 10px;
 }
 
 h1 {
